rename html files in file directory

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,16 +5,20 @@
     box-sizing: border-box;
 }
 
-/* this section is to make Main element take up surplus space and push footer down*/
+.h1styling{
+    background-color: blue;
+}
+
+body {
+    background-color:aquamarine;
+}
+
+/* Make Main element take up surplus space and push footer down*/
 main {
     flex: 1 0 auto;
     margin-top: auto;
 }
 
-
-body {
-    background-color: rgb(216, 196, 255);
-}
 
 ul {
     list-style-type: none;
