add flex properties to div with h1 header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,15 +5,17 @@
     box-sizing: border-box;
 }
 
-.h1styling{
+.h1styling {
     background-color: bisque;
+    display: flex;
+    align-items: center;
     /* add a box shadow to seperate header from body element*/
     box-shadow: 0 2px 2px black;
 
 }
 
 body {
-    background-color:aliceblue;
+    background-color: aliceblue;
 }
 
 /* Make Main element take up surplus space and push footer down*/
