add event listener on click and write function to display correct choice with color change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,13 @@ body {
     display:block;
     font-weight:700;
 }
+
+.correct {
+    background-color:deepskyblue
+}
+.incorrect {
+    background-color: brown;
+}
 /* footer styling*/
 .nav {
     background-color: coral;
