--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ body {
 .quiz-area {
         width:90%;
         max-width: 600px;
-        margin: 30px auto 50px;
+        margin: 35px auto 72px;
     
 }
 
@@ -94,6 +94,10 @@ body {
 }
 .incorrect {
     background-color:chocolate;
+}
+.score-count{
+    text-align: center;
+    
 }
 /* footer styling*/
 .nav {
