--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ body {
     margin: 20px auto  0;
     border-radius: 4px;
     display:block;
-    font-weight:700;
+    font-weight:bolder;
 }
 
 .correct {
