--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,16 +39,18 @@ body {
     text-align: center;
 
 }
+
 #p2quiz-area {
     margin: 10px auto 19px;
     text-align: center;
 }
+
 /* margin and style for main quiz-area*/
 .quiz-area {
-        width:90%;
-        max-width: 600px;
-        margin: 35px auto 72px;
-    
+    width: 90%;
+    max-width: 600px;
+    margin: 35px auto 72px;
+
 }
 
 .question-area h2 {
@@ -68,37 +70,52 @@ body {
 }
 
 /* add hover effect*/
-.btn:hover:not([disabled]){
+.btn:hover:not([disabled]) {
     background-color: blue;
-    color:aqua
+    color: aqua
 }
-#answer-buttons{
+
+#answer-buttons {
     font-weight: bolder;
 }
 
-#submit-button{
+#next-button {
     cursor: pointer;
     color: black;
     background-color: aqua;
     border-radius: 1px;
     padding: 10px;
     width: 150px;
-    margin: 20px auto  0;
+    margin: 20px auto 0;
     border-radius: 4px;
-    display:block;
-    font-weight:bolder;
+    display: block;
+    font-weight: bolder;
 }
 
 .correct {
-    background-color:aquamarine
+    background-color: aquamarine
 }
+
 .incorrect {
-    background-color:chocolate;
+    background-color: chocolate;
 }
-.score-count{
+
+.score-count {
     text-align: center;
-    
 }
+
+/* This is temporary disabled  */
+.nav-correct-answer {
+    font-size: medium;
+color: brown;
+display: inline-flex;
+flex-direction: column;
+#justify-content: center;
+
+}
+
+
+
 /* footer styling*/
 .nav {
     background-color: coral;
@@ -115,4 +132,3 @@ body {
     font-size: 20px;
     padding: 20px;
 }
-
