--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,13 +39,13 @@ body {
 
 /* style h2 header */
 #h2quiz-area {
-    margin: 10px auto 10px;
+    margin: 8px auto 16px;
     text-align: center;
 }
 
 /* style paragraph that displays quiz instructions */
 #p2quiz-area {
-    margin: 10px auto 19px;
+    margin: 10px auto 16px;
     text-align: center;
 }
 
@@ -56,6 +56,7 @@ body {
     margin: 35px auto 72px;
 
 }
+
 /*style questions */
 .question-area h2 {
     font-size: x-large;
@@ -86,8 +87,15 @@ body {
 }
 
 /* id for div element */
-#reset-button {
+#refresh-button {
     font-weight: bolder;
+    color: white;
+    background-color: red;
+    border-radius: 2px;
+    padding: 2px;
+    width: 100px;
+    margin: 2px auto 0;
+    display: block;
 }
 
 /* style button to go to next set of questions*/
